@@ -142,15 +142,21 @@ For example, you can access a range consisting of one cell by providing the row 
 
   range = sheet.range([1,1])
 
-Using the A1-format you write
+Using the A1-format and R1C1-format you write
 
   range = sheet.range("A1") 
+
+and
+
+  range = sheet.range("Z1S1")
+
+respectively.
 
 You can access a rectangular range by providing the row and column of the top left cell and the row and column of the bottum right cell. 
 
   range = sheet.range([1..3,1..4])
 
-or using the a1-format
+or using the A1-format.
 
   range = sheet.range([1..3,"A".."D"])
 
@@ -158,9 +164,19 @@ or
 
   range = sheet.range("A1:D3")
 
+ors using the R1C1-format
+
+  range = sheet.range("Z1S1:Z3S4")
+
 Infinite ranges are defined, e.g., by setting the rows or columns to +nil+
 
   range = sheet.range([1..3,nil])
+  range = sheet.range([nil,"A".."B"])
+
+Using the A1-format you write
+
+  range = sheet.range("1:3")
+  range = sheet.range("A:B")
 
 You get the values of the range as flat array with help of
 
