@@ -6,7 +6,8 @@ All notable changes to this project will be documented in this file.
 ### Added
   - Workbook#create
   - Excel#workbooks, each_workbook, each_workbook_with_index
-  - Address#new, ReoCommon::RangeOwners#add_name: allowing infinite ranges
+  - Address#int_range,#r1c1,#a1
+  - ReoCommon::RangeOwners#add_name: allowing infinite ranges
 
 ## [1.6]
 
